src/test/deca/context/invalid/attribut_meme_noms.deca
// Description :
// deux attribut meme noms , problème...
//
// Resultats :
// Echec

class Club {
    int score;
    float score;
}
{
}
